fix: Java 1.8 compatibility in PublicApiBeanContractTest
- Replace Path.of() with Paths.get() (Java 11+ -> Java 8)
- Replace var with explicit type (Java 10+ -> Java 8)
- Replace List.of/Set.of/Map.of with Collections methods (Java 9+ -> Java 8)
- Replace .toList() with .collect(Collectors.toList()) (Java 16+ -> Java 8)